--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
   <link rel="apple-touch-icon" href="/favicon-16x16.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"
-    content="Caveman Text Utilities is an utility program which let you manipulate the text in the way you want." />
-  <title>Caveman Text Utilities-Home</title>
+    content="Caveman Text Utilities is an utility program which let you manipulate the text in the way you want including things like lowercase, uppercase, bold, italic , word and character counter and reading time." />
+  <title>Caveman Text Utilities - Home</title>
 </head>
 
 <body>
