Meta tags included

--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@
   <link rel="apple-touch-icon" href="/favicon-16x16.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"
     content="Caveman Text Utilities is an utility program which let you manipulate the text in the way you want including things like lowercase, uppercase, bold, italic , word and character counter and reading time." />
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://caveman-textutils.pages.dev/">
+  <meta property="og:title" content="Caveman TextUtils">
+  <meta property="og:description" content="A simple React based utility site for simple text operations.">
+  <meta property="og:image" content="https://your-site-url.com/preview.png">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://caveman-textutils.pages.dev/">
+  <meta property="twitter:title" content="Caveman TextUtils">
+  <meta property="twitter:description" content="A simple React utility site for simple text operations.">
+  <meta property="twitter:image" content="https://your-site-url.com/preview.png">
   <title>Caveman Text Utilities - Home</title>
 </head>
 
